<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nanodegree_apps_list"
    android:background="@color/backgroundColor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/textview_margin_top"
        android:text="@string/app_heading">
    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/scrollview_margin"
        android:layout_marginBottom="@dimen/scrollview_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/button_margin_sides"
                android:layout_marginRight="@dimen/button_margin_sides"
                android:layout_height="wrap_content"
                android:text="@string/movies"
                android:onClick="showInfo"
                android:background="@android:color/holo_orange_dark" />

            <Button
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/button_margin_sides"
                android:layout_marginRight="@dimen/button_margin_sides"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_gap"
                android:text="@string/hawk"
                android:onClick="showInfo"
                android:background="@android:color/holo_orange_dark"/>

            <Button
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/button_margin_sides"
                android:layout_marginRight="@dimen/button_margin_sides"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_gap"
                android:text="@string/build_it_bigger"
                android:onClick="showInfo"
                android:background="@android:color/holo_orange_dark"/>

            <Button
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/button_margin_sides"
                android:layout_marginRight="@dimen/button_margin_sides"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_gap"
                android:text="@string/app_material"
                android:onClick="showInfo"
                android:background="@android:color/holo_orange_dark"/>

            <Button
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/button_margin_sides"
                android:layout_marginRight="@dimen/button_margin_sides"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_gap"
                android:text="@string/ubiquitous"
                android:onClick="showInfo"
                android:background="@android:color/holo_orange_dark"/>

            <Button
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/button_margin_sides"
                android:layout_marginRight="@dimen/button_margin_sides"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_gap"
                android:text="@string/capstone"
                android:onClick="showInfo"
                android:background="@android:color/holo_red_light"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
